syntax = "proto3";

package msg;

message VlcMsg {// type = request, meta is event byt, type = sync , type = terminate
    string type = 1;
    bytes vlc_meta = 2;
}

message VlcMeta {
    Clock clock_state = 1;
    bytes event_meta = 2;
}

message Clock {
    string id = 1;
    uint64 value = 2;
    repeated Clock ancestors = 3;
}
